# updall

./: pyproject.toml
src/updall/: __init__.py
