[project]
name = "updall"
version = "0.3.0"
description = "A simple update manager"
readme = "README.md"
authors = [{ name = "Bruno Carnazzi", email = "bcarnazzi@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "rich>=14.1.0",
    "sh>=2.2.2",
]

[project.scripts]
updall = "updall:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
